2006-10-08  Assaf Gordon  <agordon88@gmail.com>

	* src/libgbiewer/viewer-window.c:
	* src/libgviewer/bm_byte.{c.h}:
	* src/libgviewer/bm_chartype.{c,h}:
	* src/libgviewer/cp437.{c,h}:
	* src/libgviewer/input_mode.c:
	* src/libgviewer/libgviewer.h:
	* src/libgviewer/Makefile.am:
	* src/libgviewer/search-dlg.{c,h}:
	* src/libgviewer/searcher.{c,h}:
	* src/libgviewer/search-progress-dlg.{c,h}:
	* src/libgviewer/text-render.{c,h}:
	* src/libgviewer/viewer-utils.{c,h}:
	* src/libgviewer/viewer-widget.{c,h}:
	* tests/gviewer/Makefile.am:
	* tests/gviewer/bm_byte_test.c:
	* tests/gviewer/bm_chartype_test.c:
	* tests/gviewer/utils_test.c:
	Added "Find" feature to the internal viewer

2006-10-07  vlad <b100dian@gmail.com>
  
	* src/gnome-cmd-file-list.c:
	* src/gnome-cmd-rename-dialog.c:
	* src/gnome-cmd-rename-dialog.h:
	Added in-place rename (SHIFT+F6)

2006-10-07  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.c:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-main-win.c:
	Added CTRL+SHIFT+H for toggle of hidden files filter

2006-10-04  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.c:
	* src/gnome-cmd-tags.c:
	* src/gnome-cmd-tags.h:
	More work on 'Metatag' button

2006-10-02  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.c:
	* src/gnome-cmd-advrename-dialog.h:
	More work on buttons for fast access to advrename template placeholders

2006-09-28  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.c:
	Added buttons for fast access to advrename template placeholders

2006-09-26  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in:
	* po/POTFILES.in:
	* src/Makefile.am:
	* src/gnome-cmd-advrename-lexer.l:
	* src/gnome-cmd-file.c:
	* src/gnome-cmd-file.h:
	* src/gnome-cmd-tags-libs.c:
	* src/gnome-cmd-tags-libs.h:
	* src/gnome-cmd-tags.c:
	* src/gnome-cmd-tags.h:
	Added suddort for Exif and IPTC metatags in advrename

2006-09-17  Dušan Hokův  <dusan@mirc.cz>

	* src/*.c:
	Add missing '#include <config.h>'
